--- a/SmartLiving/composer.json
+++ b/SmartLiving/composer.json
@@ -5,25 +5,37 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "composer/package-versions-deprecated": "^1.10",
         "doctrine/doctrine-bundle": "^2.1",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
         "sensio/framework-extra-bundle": "^5.5",
         "symfony/console": "5.1.*",
+        "symfony/debug-bundle": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
+        "symfony/monolog-bundle": "^3.0",
+        "symfony/security-bundle": "5.1.*",
+        "symfony/stopwatch": "5.1.*",
+        "symfony/twig-bundle": "5.1.*",
+        "symfony/var-dumper": "5.1.*",
+        "symfony/web-profiler-bundle": "5.1.*",
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.20"
     },
     "config": {
         "optimize-autoloader": true,
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "platform": {
+            "php": "7.4.8"
+        }
     },
     "autoload": {
         "psr-4": {
