--- a/SmartLiving/composer.json
+++ b/SmartLiving/composer.json
@@ -10,7 +10,9 @@
         "doctrine/doctrine-bundle": "^2.1",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
+        "mobiledetect/mobiledetectlib": "^2.8",
         "sensio/framework-extra-bundle": "^5.5",
+        "symfony/asset": "5.1.*",
         "symfony/console": "5.1.*",
         "symfony/debug-bundle": "5.1.*",
         "symfony/dotenv": "5.1.*",
