--- a/SmartLiving/composer.json
+++ b/SmartLiving/composer.json
@@ -30,7 +30,9 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
-        "symfony/maker-bundle": "^1.20"
+        "fzaninotto/faker": "^1.9",
+        "symfony/maker-bundle": "^1.20",
+        "symfony/phpunit-bridge": "^5.1"
     },
     "config": {
         "optimize-autoloader": true,
