--- a/Docker_SmartLiving/docker-compose.yml
+++ b/Docker_SmartLiving/docker-compose.yml
@@ -1,11 +1,11 @@
 # docker-compose.yml
-version: '3.9'
+version: '2.2'
 
 services:
     db:
         image: mysql:5
         ports:
-            - 3306:3306
+            - 3306:3306 #port externe : port interne
         environment:
             MYSQL_ROOT_USER: root
             MYSQL_ROOT_PASSWORD: root
